# Zabbix-MCP

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: API.md  DEPLOYMENT.md  SECURITY.md
scripts/: smoke_test.ps1  smoke_test.sh  start_unix38.sh  start_win38.ps1
zabbix_mcp/: __init__.py  api.py  auth.py  cli.py  config.py  logging.py  metrics.py  nlp.py  queue.py  schemas.py  services.py  ws.py  zabbix_client.py
zabbix_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
